@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="net.yura.domination"
-      android:versionCode="31"
-      android:versionName="31"
-      android:installLocation="preferExternal">
+      android:versionCode="32"
+      android:versionName="32"
+      android:installLocation="auto">
       
     <!-- android:targetSdkVersion 11 to hide the legacy menu button on tablets -->
     <!-- android:targetSdkVersion 14 to hide the legacy menu button on phones  -->
